# flex

./: CMakeLists.txt  README  config.h.cmake  configure.ac
doc/: CMakeLists.txt  version.texi.cmake
lib/: CMakeLists.txt
po/: CMakeLists.txt
src/: CMakeLists.txt  FlexLexer.h  Makefile.am  buf.c  ccl.c  dfa.c  filter.c  flex.skl  flexdef.h  gen.c  libmain.c  main.c  misc.c  nfa.c  options.c  options.h  parse.y  scan.l  scanopt.c  tables.c  tables_shared.h  utf8.h  yychar.h  yylex.c
tests/: CMakeLists.txt  Makefile.am  strutils.h  test-utf8.output  test_strutils.c  test_utf8.c
tests/test-alloc-extra/: scanner.l
tests/test-array-nr/: scanner.l
tests/test-array-r/: scanner.l
tests/test-basic-nr/: scanner.l
tests/test-basic-r/: scanner.l
tests/test-bison-nr/: Makefile.am  main.c  parser.y  scanner.l
tests/test-bison-yylloc/: Makefile.am  main.c  parser.y  scanner.l
tests/test-bison-yylval/: Makefile.am  main.c  parser.y  scanner.l
tests/test-c++-multiple-scanners/: main.cpp
tests/test-ccl/: scanner.l
tests/test-charset/: Makefile.am  scanner.l.in
tests/test-charset-nr/: CMakeLists.txt  scanner.l  test-ascii.input  test-ebcdic.output
tests/test-charset-r/: CMakeLists.txt  scanner.l  test-ebcdic.input
tests/test-concatenated-options/: CMakeLists.txt
tests/test-debug-nr/: scanner.l
tests/test-debug-r/: scanner.l
tests/test-extended/: scanner.l
tests/test-header-nr/: scanner.l
tests/test-header-r/: main.c  scanner.l
tests/test-include-by-buffer/: scanner.l
tests/test-include-by-push/: scanner.l
tests/test-include-by-reentrant/: scanner.l  test.input
tests/test-linedir-r/: main.c  scanner.l
tests/test-lineno-nr/: scanner.l
tests/test-lineno-r/: scanner.l
tests/test-lineno-trailing/: scanner.l
tests/test-mem-nr/: scanner.l
tests/test-mem-r/: scanner.l
tests/test-multiple-scanners-nr/: scanner-1.l  scanner-2.l
tests/test-multiple-scanners-r/: scanner-1.l  scanner-2.l
tests/test-noansi-nr/: scanner.l
tests/test-noansi-r/: scanner.l
tests/test-posix/: scanner.l
tests/test-posixly-correct/: scanner.l
tests/test-prefix-nr/: scanner.l
tests/test-prefix-r/: scanner.l
tests/test-pthread/: scanner.l
tests/test-quotes/: scanner.l
tests/test-reject/: CMakeLists.txt  scanner.l
tests/test-rescan-nr/: scanner.l
tests/test-rescan-r/: scanner.l
tests/test-string-nr/: scanner.l
tests/test-string-r/: scanner.l
tests/test-table-opts/: CMakeLists.txt  scanner.l
tests/test-top/: main.c  scanner.l
tests/test-unicode-basic-nr/: CMakeLists.txt  scanner.l  test.input
tests/test-unicode-basic-r/: CMakeLists.txt  scanner.l  test.output
tests/test-unicode-nr/: CMakeLists.txt  scanner.l  test.output
tests/test-unicode-r/: CMakeLists.txt  scanner.l  test.input
tests/test-yychar/: Makefile.am  test_yychar.c
tests/test-yyextra/: scanner.l
